# credit-risk

./: .dockerignore  .gitignore  Dockerfile  README.md  common_uv_commands.md  docker-compose.yml  index.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: requirements.txt  streamlit_app.py
app/data/: sample_data.csv
app/models/: lrc_pipeline.pkl  rfc_pipeline.pkl  svc_pipeline.pkl
docs/: architecture.html  instructions.md
notebooks/: feature_engineering.ipynb  investigation.ipynb
scripts/: export_pipelines.py  process_data.py  score_ensemble.py  split_data.py
src/credit_risk_model/: ensemble.py  predict.py  target_semantics.py
src/credit_risk_model/config/: core.py  model_config.yml
src/credit_risk_model/processing/: catboost_wrapper.py  features.py  preprocessors.py
src/credit_risk_model/tracking/: metrics.py  visualizations.py
src/credit_risk_model/training/: base.py  train_catboost.py  train_lrc.py  train_rf.py  train_svc.py
tests/: conftest.py  test_ensemble.py  test_features.py  test_prediction.py  test_target_semantics.py
